[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprite/TinyBulletSprite.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entity/Bullet/HomingBulletToEnemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1, 1 )

[node name="HomingBulletToEnemy" type="Node2D"]
script = ExtResource( 2 )

[node name="Hitbox" type="Area2D" parent="." groups=["enemy_homer"]]
collision_layer = 1024
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -1, 0 )
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="TinyBulletSprite" parent="." instance=ExtResource( 1 )]
modulate = Color( 1, 1, 1, 0.2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="tree_exiting" from="Hitbox" to="." method="_on_Hitbox_tree_exiting"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
